[fix] overflow blank bar in X

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,6 +1,12 @@
+#root {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
 
 html, body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
